refactor: fix sonarqube issues, constructor injection and stream improvements